펫 관련 서비스, 컨트롤러 로직 수정(최적화 및 검증 강화 등)